kubernetes/apps/networking/homelab/nextcloud/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.1.164
    ports:
      - name: nextcloud-app
        port: 80
        protocol: TCP
